# project-v7n2m9k4

./: .gitignore  README.md  pyproject.toml
assistant/: __main__.py  main.py
assistant/commands/: __init__.py  commands_resolver.py
assistant/errors/: __init__.py  errors_handler.py  exceptions.py
assistant/handlers/: __init__.py  address_handler.py  birthdays_handler.py  contacts_handler.py  emails_handler.py  notes_handler.py  phones_handler.py
assistant/models/: __init__.py  address_book.py  field.py  notes.py
assistant/storage/: storage.py
assistant/utils/: __init__.py  console.py  contact_utils.py  extract_text_and_tags.py  print_contacts_table.py  print_help_table.py  print_notes_table.py
assistant/validators/: __init__.py  arguments_validator.py  data_validator.py
