[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "assistant"
version = "0.1.0"
description = "CLI assistant for contacts and notes"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "colorama",
    "tabulate"
]

[tool.setuptools.packages.find]
include = ["assistant", "assistant.*"]

[project.scripts]
assistant = "assistant.main:main"
